feat(currency): reset button

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,7 +2,8 @@
     "BASE": {
         "ACTIONS": {
             "ADD": "Addieren",
-            "SUBTRACT": "Subtrahieren"
+            "SUBTRACT": "Subtrahieren",
+            "RESET": "Zurücksetzen"
         },
         "CURRENCY": {
             "TITLE": "Währung",
