--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,8 @@
     "BASE": {
         "ACTIONS": {
             "ADD": "Add",
-            "SUBTRACT": "Subtract"
+            "SUBTRACT": "Subtract",
+            "RESET": "Reset"
         },
         "CURRENCY": {
             "TITLE": "Currency",
