--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -15,7 +15,7 @@
             "DAYS": "{value} {value, plural, one{Tag} other{Tage}}",
             "HOURS": "{value} {value, plural, one{Stunde} other{Stunden}}",
             "MINUTES": "{value} {value, plural, one{Minute} other{Minuten}}",
-            "TIME_TILL": "Until {days} {days, plural, one{Tag} other{Tage}} {hours} {hours, plural, one{Stunde} other{Stunden}} {minutes} {minutes, plural, one{Minute} other{Minuten}}",
+            "TIME_TILL": "{days} {days, plural, one{Tag} other{Tage}} {hours} {hours, plural, one{Stunde} other{Stunden}} {minutes} {minutes, plural, one{Minute} other{Minuten}} bis zum",
             "GAME_DAY": "Game day"
         },
         "INSPIRATIONS": {
