--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,8 @@
             "GOLD": "Gold",
             "PLATINUM": "Platinum",
             "SILVER": "Silver",
-            "TITLE": "Currency"
+            "TITLE": "Currency",
+            "USE_PLATINUM": "Display platinum"
         },
         "GENERAL": {
             "DAYS": "{value} {value, plural, one{day} other{days}}",
