feat(currency): add reset confirmation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,6 +2,7 @@
     "BASE": {
         "ACTIONS": {
             "ADD": "Addieren",
+            "CANCEL": "Abbrechen",
             "RESET": "Zurücksetzen",
             "SUBTRACT": "Subtrahieren",
             "SWITCH": "Wechseln"
@@ -10,6 +11,7 @@
             "COPPER": "Kupfer",
             "GOLD": "Gold",
             "PLATINUM": "Platin",
+            "RESET": "Diese Aktion wird deine Währung auf 0 zurücksetzen.\nBist du dir sicher?",
             "SILVER": "Silber",
             "TITLE": "Währung",
             "USE_PLATINUM": "Platin anzeigen"
